# tuxanci-ng

./: .gitignore  AUTHORS  CHANGELOG  CHANGELOG.md  CMakeLists.txt  Doxyfile  HANDBOOK  HISTORY.md  INSTALL  INSTALL.md  Makefile  README  README.md  README.sk  TODO.md  build.sh  ci  clean.sh  config.h  configure  control  deb-build.sh  deb_config.h  defaults.h  generate_gettext_pot.sh  kr.sh  main.cpp  path_config.h  publicserver.sh  resolve.c  server.conf  svn_commit.sh  tarball-build.sh  tarballbin-build.sh  tuxanci-ng.sh
appimage/: AppRun  build.sh
arena/: Construction_site.map  In_a_captivity_of_8-bit.map  Night_workshift.map  ba_in_a_captivity_of_8-bit.map  construction_site.map  for_a_good_night.map  in_a_captivity_of_8-bit.map  mapa1.map  night_workshift.map
cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  FindCairo.cmake  FindFontconfig.cmake  FindGettext.cmake  FindOpenGL.cmake  FindSDL.cmake  FindSDL_image.cmake  FindSDL_mixer.cmake  FindSDL_ttf.cmake  FindZIP.cmake  MacroAddSources.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  cmake_uninstall.cmake.in
cmake/data/: Makefile  cmake_install.cmake
cmake/po/: Makefile  cmake_install.cmake
cmake/src/: Makefile  cmake_install.cmake
cmake/src/base/: path.h
data/: CMakeLists.txt  README  credits.en  io.github.GNUfault.tuxanci.desktop  keytable.conf  lang.en  lang.sk  tuxanci.1  tuxanci.desktop  tuxanci.desktop.in  tuxanci.man
data/arena/: CMakeLists.txt
data/conf/: CMakeLists.txt  arena.conf.in  server.conf
data/font/: CMakeLists.txt
data/image/: CMakeLists.txt
data/images/: CMakeLists.txt
data/lang/: CMakeLists.txt  cs.lang  en.lang  fr.lang  sk.lang
data/music/: CMakeLists.txt
data/sound/: CMakeLists.txt
flatpak/: build.sh  io.github.GNUfault.tuxanci.metainfo.xml  manifest.json
handbook/: codestyle
include/: arena.h  arenaFile.h  checkFront.h  client.h  configFile.h  fake_audio.h  game.h  hashTable.h  homeDirector.h  idManager.h  interface.h  item.h  keytable.h  language.h  layer.h  main.h  modules.h  music.h  myTimer.h  net_multiplayer.h  path.h  pipe.h  proto.h  publicServer.h  screen_choiceArena.h  screen_gameType.h  screen_setting.h  screen_world.h  server.h  shot.h  sound.h  space.h  storage.h  string_length.h  tcp.h  teleport.h  term.h  tux.h  udp.h  wall.h  (+4 more)
lang/: cs.lang  en.lang  fr.lang  sk.lang
modules/: Makefile  Makefile-publicserver  modAI.c  modPipe.c  modTeleport.c  modWall.c  space.c
packaging/appimage/: appimage.sh
packaging/deb/: build.sh  control  deb-build.sh  tuxanci-ng.desktop
packaging/flatpak/: build.sh  io.github.GNUfault.tuxanci.metainfo.xml  manifest.json
packaging/gentoo/: tuxanci-0.20.0-r1.ebuild  tuxanci-0.21.0.ebuild  tuxanci-9999.ebuild
packaging/linux/: build.sh
packaging/source/: source.sh
po/: CMakeLists.txt  cs_CZ.po  de_DE.po  tuxanci.pot
scripts/: clean.sh  dos2unix.sh  generate_gettext_pot.sh  kr.sh  replace.sh
src/: CMakeLists.txt  Makefile  Makefile-listserver  Makefile-nosound  Makefile-publicServer  Makefile-sdlnet  Makefile-server  arena.c  arenaFile.c  checkFront.c  client.c  configFile.c  director.c  dynamicInt.c  fake_audio.c  font.c  game.c  gun.c  hashTable.c  homeDirector.c  idManager.c  image.c  interface.c  item.c  keytable.c  language.c  layer.c  listServer.c  main.c  modules.c  music.c  myTimer.c  net_multiplayer.c  pipe.c  proto.c  publicServer.c  screen.c  screen_analyze.c  screen_choiceArena.c  screen_credits.c  (+24 more)
src/audio/: Makefile  audio.c  audio.h  music.c  music.h  sound.c  sound.h
src/base/: Makefile  archive.c  archive.h  arena.c  arena.h  arenaFile.c  arenaFile.h  bool.h  buffer.c  buffer.h  checkFront.c  checkFront.h  director.c  director.h  downServer.c  downServer.h  fake_audio.c  gun.c  gun.h  homeDirector.c  homeDirector.h  idManager.c  idManager.h  index.c  index.h  item.c  item.h  list.c  list.h  main.c  main.h  modules.c  modules.h  msg.h  myTimer.c  myTimer.h  net_multiplayer.c  net_multiplayer.h  path.h  path.h.in  (+27 more)
src/client/: CMakeLists.txt  Makefile  chat.c  chat.h  client.c  client.h  config.c  config.h  configFile.c  configFile.h  control.c  control.h  font.c  font.h  fontConfig.c  fontConfig.h  fontConfig_emscripten.c  game.c  game.h  hotKey.c  hotKey.h  image.c  image.h  interface.c  interface.h  keyboardBuffer.c  keyboardBuffer.h  keytable.c  language.c  layer.c  layer.h  mouse_buffer.c  mouse_buffer.h  panel.c  panel.h  pauza.c  pauza.h  radar.c  radar.h  saveDialog.c  (+7 more)
src/downserver/: CMakeLists.txt  downServer.c
src/emscripten/: index.html  styles.css
src/modules/: CMakeLists.txt  Makefile  list.c  modAI.c  modBasic.c  modMove.c  modPipe.c  modTeleport.c  modWall.c  space.c  space.h
src/net/: .udp.c.swp  dns.c  dns.h  tcp.c  tcp.h  udp.c  udp.h
src/net_sdl/: Makefile  sdl_udp.c  sdl_udp.h
src/net_unix/: Makefile  dns.c  dns.h  udp.c  udp.h
src/screen/: Makefile  analyze.c  analyze.h  browser.c  browser.h  choiceArena.c  choiceArena.h  credits.c  credits.h  downArena.c  downArena.h  gameType.c  gameType.h  mainMenu.c  mainMenu.h  screen_analyze.c  screen_analyze.h  screen_browser.c  screen_browser.h  screen_choiceArena.c  screen_choiceArena.h  screen_credits.c  screen_credits.h  screen_downArena.c  screen_downArena.h  screen_gameType.c  screen_gameType.h  screen_mainMenu.c  screen_mainMenu.h  screen_setting.c  screen_setting.h  screen_settingKeys.c  screen_settingKeys.h  screen_table.c  screen_table.h  screen_world.c  screen_world.h  setting.c  setting.h  settingKeys.c  (+5 more)
src/server/: Makefile  heightScore.c  heightScore.h  highScore.c  highScore.h  log.c  log.h  logFile.c  logFile.h  publicServer.c  publicServer.h  serverConfigFile.c  serverConfigFile.h
src/widget/: Makefile  widget.c  widget.h  widget_button.c  widget_button.h  widget_buttonimage.c  widget_buttonimage.h  widget_catchkey.c  widget_catchkey.h  widget_check.c  widget_check.h  widget_choicegroup.c  widget_choicegroup.h  widget_image.c  widget_image.h  widget_label.c  widget_label.h  widget_select.c  widget_select.h  widget_statusbar.c  widget_textfield.c  widget_textfield.h
(+15 files in other folders)
